0.11.0/_sources/reference/dipy.denoise.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`denoise`
==============
.. automodule:: dipy.denoise

.. currentmodule:: dipy.denoise
.. autosummary::

   bench
   test

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`denoise.nlmeans`
------------------------------
.. automodule:: dipy.denoise.nlmeans

.. currentmodule:: dipy.denoise.nlmeans
.. autosummary::

   nlmeans
   nlmeans_3d

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`denoise.noise_estimate`
-------------------------------------
.. automodule:: dipy.denoise.noise_estimate

.. currentmodule:: dipy.denoise.noise_estimate
.. autosummary::

   convolve
   estimate_sigma
   piesno


.. currentmodule:: dipy.denoise

bench
~~~~~

.. autofunction:: bench

test
~~~~

.. autofunction:: test


.. currentmodule:: dipy.denoise.nlmeans

nlmeans
~~~~~~~

.. autofunction:: nlmeans

nlmeans_3d
~~~~~~~~~~

.. autofunction:: nlmeans_3d


.. currentmodule:: dipy.denoise.noise_estimate

convolve
~~~~~~~~

.. autofunction:: convolve

estimate_sigma
~~~~~~~~~~~~~~

.. autofunction:: estimate_sigma

piesno
~~~~~~

.. autofunction:: piesno

